--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "node-arrow",
+    "name": "yarrow",
     "description": "FrontEnd Testing Framework",
     "version": "0.0.58",
     "homepage": "https://github.com/yahoo/arrow",
