removing lego name

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     },
     "yahoo": {
         "bugzilla": {
-            "product": "Lego QE Platform",
+            "product": "",
             "component": "Arrow"
         }
     },
